istack-tools javadoc plugin fix
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>