@@ -158,8 +158,8 @@
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <configuration>
                             <additionalJOptions>
-                                <additionalJOption>--add-modules</additionalJOption>
-                                <additionalJOption>ant</additionalJOption>
+                                <additionalJOption>--add-reads</additionalJOption>
+                                <additionalJOption>com.sun.istack.tools=ALL-UNNAMED</additionalJOption>
                                 <additionalJOption>--module-path</additionalJOption>
                                 <additionalJOption>${project.build.directory}/mods</additionalJOption>
                             </additionalJOptions>
